<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_image" />


        <Button
            android:id="@+id/select_album_multiple_for_puzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_image_puzzle" />


        <Button
            android:id="@+id/custom_puzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_puzzle" />

        <Button
            android:id="@+id/select_album_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_image_single" />


        <Button
            android:id="@+id/btn_show_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="产品展示" />

        <Button
            android:id="@+id/btn_remove_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="去除广告" />

    </LinearLayout>

    <Button
        android:id="@+id/take_photo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/text100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>