<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/splash_title"
            android:textColor="@color/white"
            android:textSize="13sp"
            />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp">

        <ImageView
            android:id="@+id/iv_start_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="60dp"
            android:src="@drawable/shape_rect_start_normal" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="18sp"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_splash_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/btn_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-70dp">

        <FrameLayout
            android:id="@+id/fl_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text10">
            <ImageView
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pri_policy_normal"
                />
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_gravity="center"
            />


        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_privacy_policy"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:paddingVertical="8dp"
            />
    </LinearLayout>

    <WebView
        android:id="@+id/wv_show_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</RelativeLayout>