<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:padding="15dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

<!--    大写头部-->
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:text="@string/encourage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/dialog_dismiss"
            android:padding="10dp"
            android:onClick="dismiss"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/exit_close"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

    </RelativeLayout>

<!--    内容提示-->
    <TextView
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/text20"
        android:textColor="@color/setting_back"
        android:textSize="13sp"
        android:text="@string/encourage_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RatingBar
        style="@style/MyRatingBar"
        android:id="@+id/rb_encourage"
        android:layout_marginTop="@dimen/text10"
        android:layout_marginBottom="@dimen/text20"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0"
        />


    <TextView
        android:id="@+id/tv_encourage_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/text20"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/text15"/>


</LinearLayout>